--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-switch": "^7.1.0",
     "tone": "^15.1.22"
   },
   "devDependencies": {
