--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@use-gesture/react": "^10.3.1",
     "classnames": "^2.5.1",
     "next": "15.3.5",
+    "pixi.js": "^8.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-switch": "^7.1.0",
