--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-switch": "^7.1.0",
-    "tone": "^15.1.22",
-    "zustand": "^5.0.6"
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
