--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.1",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "next": "15.3.5",
     "react": "^19.0.0",
